<resources>
    <string name="app_name">Focal Systems</string>
    <string name="act_main_button_take_picture">Take Picture</string>
    <string name="act_main_button_picture_taken">Picture taken</string>
    <string name="act_main_button_save">Save</string>
    <string name="error_photo">There was a problem, try again</string>
    <string name="description">description</string>
    <string name="take_photo">Take Photo</string>
    <string name="save_photo">Save Photo</string>
    <string name="watch_list">Watch Photos</string>
    <string name="edit_photo">Edith Photo</string>
    <string name="draw_photo">Draw</string>
</resources>
